--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Helvetica Neue";
-  src: url("/fonts/helveticaneue.woff2") format("woff2");
+  src: url("./fonts/helveticaneue.woff2") format("woff2");
 }
 
 html,
